--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -15,8 +15,8 @@
     <string name="menu_report">Pranešti problemas</string>
     <string name="menu_export">Exportuoti</string>
     <string name="menu_import">Importuoti</string>
-    <string name="menu_submit">Pateikti leidimus</string>
-    <string name="menu_fetch">Gauti leidimus</string>
+    <string name="menu_submit">Pateikti leidimus į serverį</string>
+    <string name="menu_fetch">Gauti leidimus iš serverio</string>
     <string name="menu_theme">Keisti temą</string>
     <string name="menu_pro">Pro versija aktyvi</string>
     <string name="menu_about">Apie</string>
@@ -33,10 +33,10 @@
     <string name="menu_usage_all">Perjungti filtrą</string>
     <string name="menu_apply">Taikyti šabloną</string>
     <string name="menu_clear">Išvalyti</string>
-    <string name="menu_app_launch">Paleisti</string>
+    <string name="menu_app_launch">Paleisti programą</string>
     <string name="menu_app_settings">Programos informacija</string>
     <string name="menu_app_store">Google play</string>
-    <string name="menu_app_kill">Nutraukti veikimą</string>
+    <string name="menu_app_kill">Sustabdyti programą</string>
     <string name="menu_accounts">Leisti pažymėtas paskyras</string>
     <string name="menu_applications">Leisti pažymėtas programas</string>
     <string name="menu_contacts">Leisti pažymėtus kontaktus</string>
@@ -97,15 +97,15 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="restrict_system">Sistema (įdiegtos programos)</string>
     <string name="restrict_view">Peržiūra (Naršyklė)</string>
     <string name="title_categories">Kategorijos</string>
-    <string name="title_restrict">Žiūrėti leidimus:</string>
+    <string name="title_restrict">Naudoti ribojimus:</string>
     <string name="title_fused">Duomenų naudojimas</string>
     <string name="title_finternet">Interneto prieiga</string>
     <string name="title_fpermission">Aktyvūs leidimai</string>
     <string name="title_frestricted">Riboti leidimai</string>
     <string name="title_fuser">Vartotojo programos</string>
-    <string name="title_fondemand">Filtruoti pagal reikalavimą</string>
+    <string name="title_fondemand">Pagal reikalavimą</string>
     <string name="title_fsystem">Sistemos programos</string>
-    <string name="title_fnot">Neriboti</string>
+    <string name="title_fnot"></string>neriboti</string>
     <string name="title_sname">Pagal pavadinimą</string>
     <string name="title_suid">Pagal UID</string>
     <string name="title_sinstalled">Pagal įdiegimo datą</string>
@@ -136,8 +136,8 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_ua">Vartotojo agentas</string>
     <string name="settings_general">Bendras</string>
     <string name="settings_fake_data">Netikri duomenys</string>
-    <string name="settings_notify">Atnaujinimų Pranesimas</string>
-    <string name="settings_ondemand">Riboti pagal pareikalavimą</string>
+    <string name="settings_notify">Atnaujinimų Pranešimas</string>
+    <string name="settings_ondemand">Riboti pagal reikalavimą</string>
     <string name="settings_log">DEBUG žurnalas (Perkrauti prietaisą)</string>
     <string name="settings_expert">Eksperto režimas</string>
     <string name="settings_dangerous">Apriboti pavojingas funkcijas</string>
@@ -146,7 +146,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="settings_https">Naudojamas saugus ryšys</string>
     <string name="settings_syscomponents">Riboti sistemos komponentus (Android) (reikia perkrauti)</string>
     <string name="settings_usagedata">Rodyti programos duomenų naudojimą (reikia perkrauti)</string>
-    <string name="help_longpress">Ilgas paspaudimas vardui pasirinkti</string>
+    <string name="help_longpress">Ilgai spausti ant programos pavadinimo, norint ją pasirinti</string>
     <string name="help_ondemand">apribojimai bus paprašyti</string>
     <string name="help_application">Programa</string>
     <string name="help_internet">Interneto leidimai</string>
@@ -156,7 +156,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="help_frozen">Išjungtų programų leidimai</string>
     <string name="help_dangerous">Pavojingi ribojimai, gali sukelti problemų</string>
     <string name="help_half">Dalinai riboti leidimai</string>
-    <string name="help_attention">Leidimams skirti dėmesį</string>
+    <string name="help_attention">Leidimams reikia dėmesio</string>
     <string name="help_restricted">Leidimai yra pakeisti</string>
     <string name="help_shared">Leidimai yra pateikti</string>
     <string name="tutorial_mainheader">Pasirinkite kategoriją ribojimui</string>
