--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -121,6 +121,7 @@
     <string name="title_allow">تمكين</string>
     <string name="title_deny">منع</string>
     <string name="title_pleasesubmit">الرجاء إرسال القيود لمساعدة الآخرين</string>
+    <string name="title_permissions">Permissions</string>
     <string name="settings_serial">السيريال#</string>
     <string name="settings_lat">خط العرض</string>
     <string name="settings_lon">خط الطول</string>
