--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -121,6 +121,7 @@ sin embargo no puedo garantizar que funcione sin ningún fallo para cada disposi
     <string name="title_allow">Permitir</string>
     <string name="title_deny">Denegar</string>
     <string name="title_pleasesubmit">Por favor suba sus restricciones para ayudar a otros usuarios</string>
+    <string name="title_permissions">Permissions</string>
     <string name="settings_serial"># de serie</string>
     <string name="settings_lat">Latitud</string>
     <string name="settings_lon">Longitud</string>
