--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -121,6 +121,7 @@ however it is impossible to guarantee it will work flawless on each and every de
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
     <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
+    <string name="title_permissions">Permissions</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">קו אורך</string>
     <string name="settings_lon">קו רוחב</string>
