--- a/res/values-ku-rIR/strings.xml
+++ b/res/values-ku-rIR/strings.xml
@@ -120,6 +120,7 @@
     <string name="title_allow">ریگه دان</string>
     <string name="title_deny">ریگه نه دان</string>
     <string name="title_pleasesubmit">ته کایه بو یارمه تی دانی که سانی تریش ئه و شتانه ى سنوردارتكردوون به لاو بكه </string>
+    <string name="title_permissions">Permissions</string>
     <string name="settings_serial">سريال نه مبرى موبايل</string>
     <string name="settings_lat">هیلی پانی</string>
     <string name="settings_lon">هیلی دریژی</string>
