--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -121,6 +121,7 @@ Tačiau neįmanoma garantuoti, kad dirbs nepriekaištingai su kiekvienu prietais
     <string name="title_allow">Leisti</string>
     <string name="title_deny">Drausti</string>
     <string name="title_pleasesubmit">Prašome pateikti savo apribojimus padėti kitiems</string>
+    <string name="title_permissions">Permissions</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Platuma</string>
     <string name="settings_lon">Ilguma</string>
