--- a/res/values-nb-rNO/strings.xml
+++ b/res/values-nb-rNO/strings.xml
@@ -119,6 +119,7 @@
     <string name="title_allow">Tillat</string>
     <string name="title_deny">Nekt</string>
     <string name="title_pleasesubmit">Vennligst last opp restriksjonene dine for å hjelpe andre</string>
+    <string name="title_permissions">Permissions</string>
     <string name="settings_serial">Serienummer</string>
     <string name="settings_lat">Breddegrad</string>
     <string name="settings_lon">Lengdegrad</string>
