--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -121,6 +121,7 @@
     <string name="title_allow">Pozwól</string>
     <string name="title_deny">Zabroń</string>
     <string name="title_pleasesubmit">Proszę wyślij twoje ograniczenia aby pomóc innym</string>
+    <string name="title_permissions">Permissions</string>
     <string name="settings_serial">Numer seryjny</string>
     <string name="settings_lat">Szerokość geograficzna</string>
     <string name="settings_lon">Długość geograficzna</string>
