--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -121,6 +121,7 @@ porém é impossível garantir que irá funcionar sem problemas em todos os disp
     <string name="title_allow">Allow</string>
     <string name="title_deny">Deny</string>
     <string name="title_pleasesubmit">Please submit your restrictions to help others</string>
+    <string name="title_permissions">Permissions</string>
     <string name="settings_serial">Serial#</string>
     <string name="settings_lat">Latitude</string>
     <string name="settings_lon">Longitude</string>
