--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -121,6 +121,7 @@
     <string name="title_allow">允許</string>
     <string name="title_deny">封鎖</string>
     <string name="title_pleasesubmit">稍後請上傳您的設定到社群網路利人利己 :)</string>
+    <string name="title_permissions">Permissions</string>
     <string name="settings_serial">序號</string>
     <string name="settings_lat">緯度</string>
     <string name="settings_lon">經度</string>
